#408 fix entity filter form layout issue with long labels

--- a/zmon-controller-ui/styles/forms.css
+++ b/zmon-controller-ui/styles/forms.css
@@ -179,6 +179,8 @@
 {
     font-size: small;
     margin-top: 5px;
+    padding-right: 10px;
+    overflow: hidden;
 }
 
 .parameter
